k8s/app-manifest/j26-infratest/j26-infratest.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: j26-infratest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: j26-infratest
  template:
    metadata:
      labels:
        app: j26-infratest
    spec:
      containers:
        - name: j26-infratest
          image: ghcr.io/scouterna/j26-infratest:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          securityContext: {}
      #     volumeMounts:
      #       - name: j26-infratest-volume
      #         mountPath: /data
      # volumes:
      #   - name: j26-infratest-volume
      #     persistentVolumeClaim:
      #       claimName: j26-infratest-pvc
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: j26-infratest
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
  selector:
    app: j26-infratest
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: j26-infratest-public
  labels:
    app: j26-infratest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "http"
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /infratest(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: j26-infratest
                port:
                  number: 8000
